@@ -57,7 +57,7 @@ public class RuleFactory implements Factory {
     private static final String NO = "No";
 
     private static DocumentBuilder documentBuilder;
-    public static final List<String> TRUE_CHECKS = new ArrayList<String>(Arrays.asList(new String[]{"", resources.getString(ALL)}));
+    public static final List<String> TRUE_CHECKS = List.of("", resources.getString(ALL).strip());
 
     public RuleFactory() { documentBuilder = XMLHelper.getDocumentBuilder();}
 
@@ -115,7 +115,9 @@ public class RuleFactory implements Factory {
         String name = XMLHelper.getTextValue(e, resources.getString(NAME));
         if (!TRUE_CHECKS.contains(name)) {
             valueChecker = (IMove move) -> {
-                System.out.println("name");
+                System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                System.out.println("\tcurr: " + currCell.apply(move).getName());
+                System.out.println("\t\tname result: " + ((cellGroupMap.containsKey(name) && cellGroupMap.get(name).isInGroup(currCell.apply(move).findHead().getName())) || (currCell.apply(move).findHead().getName().equalsIgnoreCase(name))));
                 return (cellGroupMap.containsKey(name) && cellGroupMap.get(name).isInGroup(currCell.apply(move).findHead().getName())) || (currCell.apply(move).findHead().getName().equalsIgnoreCase(name));
             };
             conditions.add(valueChecker);
@@ -128,13 +130,18 @@ public class RuleFactory implements Factory {
         if (!TRUE_CHECKS.contains(faceUp)) {
             if (faceUp.equalsIgnoreCase(resources.getString(YES))) {
                 valueChecker = (IMove move) -> {
-                    System.out.println("faceupY");
-                    return (currCell.apply(move).getDeck().peekBottom().isFaceUp());
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tfaceupY: " + (currCell.apply(move).getDeck().peek().isFaceUp()));
+                    return (currCell.apply(move).getDeck().peek().isFaceUp());
                 };
             } else {
                 valueChecker = (IMove move) -> {
-                    System.out.println("faceupN");
-                    return !(currCell.apply(move).getDeck().peekBottom().isFaceUp());
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("deck faceup?: " + currCell.apply(move).getDeck().peek().isFaceUp());
+                    System.out.println("\t\tfaceupN: " + !(currCell.apply(move).getDeck().peek().isFaceUp()));
+                    return !(currCell.apply(move).getDeck().peek().isFaceUp());
                 };
             }
             conditions.add(valueChecker);
@@ -143,11 +150,17 @@ public class RuleFactory implements Factory {
 
     private static void extractNumCardsCondition(Element e, List<Function<IMove, Boolean>> conditions, Function<IMove, ICell> currCell) {
         Function<IMove, Boolean> valueChecker;
-        String numCards = XMLHelper.getTextValue(e, resources.getString(NUMBER_CARDS));
+        //System.out.println("yolofdsafdsafdsafdasfsdaffs");
+        //System.out.println(resources.getString(ALL).strip());
+        //System.out.println(XMLHelper.getTextValue(e, resources.getString(NUMBER_CARDS)));
+        String numCards = XMLHelper.getTextValue(e, resources.getString(NUMBER_CARDS)).strip();
         if (!TRUE_CHECKS.contains(numCards)) {
             Integer value = Integer.parseInt(numCards);
             valueChecker = (IMove move) -> {
-                System.out.println("numcards");
+                System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                System.out.println("\tcurr: " + currCell.apply(move).getName());
+                System.out.println("\texpected numcards value: " + value);
+                System.out.println("\t\tnumcards: " + (currCell.apply(move).getTotalSize() == value)); //FIXME: BREAKS HERE
                 return (currCell.apply(move).getTotalSize() == value);
             };
             conditions.add(valueChecker);
@@ -160,18 +173,24 @@ public class RuleFactory implements Factory {
         if (!TRUE_CHECKS.contains(suit)) {
             if (suit.equals(resources.getString(SAME))) {
                 valueChecker = (IMove move) -> {
-                    System.out.println("suit");
-                    return (currCell.apply(move).getDeck().peekBottom().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peekBottom().getSuit().getName()));
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tsuit: " + (currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getName())));
+                    return (currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getName()));
                 };
             } else if (suit.equals(resources.getString(NOT))) {
                 valueChecker = (IMove move) -> {
-                    System.out.println("suit");
-                    return !(currCell.apply(move).getDeck().peekBottom().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peekBottom().getSuit().getName()));
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tsuit: " + !(currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getName())));
+                    return !(currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getName()));
                 };
             } else {
                 valueChecker = (IMove move) -> {
-                    System.out.println("suit");
-                    return (currCell.apply(move).getDeck().peekBottom().getSuit().getName().equalsIgnoreCase(suit.toUpperCase()));
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tsuit: " + (currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(suit.toUpperCase())));
+                    return (currCell.apply(move).getDeck().peek().getSuit().getName().equalsIgnoreCase(suit.toUpperCase()));
                 };
             }
             conditions.add(valueChecker);
@@ -184,18 +203,24 @@ public class RuleFactory implements Factory {
         if (!TRUE_CHECKS.contains(color)) {
             if (color.equals(resources.getString(SAME))) {
                 valueChecker = (IMove move) -> {
-                    System.out.println("color");
-                    return currCell.apply(move).getDeck().peekBottom().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peekBottom().getSuit().getColorName());
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tcolor: " + (currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getColorName())));
+                    return currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getColorName());
                 };
             } else if (color.equals(resources.getString(NOT))) {
                 valueChecker = (IMove move) -> {
-                    System.out.println("color");
-                    return !(currCell.apply(move).getDeck().peekBottom().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peekBottom().getSuit().getColorName()));
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tcolor: " +!(currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getColorName())));
+                    return !(currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(recipientCell.apply(move).getDeck().peek().getSuit().getColorName()));
                 };
             } else {
                 valueChecker = (IMove move) -> {
-                    System.out.println("color");
-                    return (currCell.apply(move).getDeck().peekBottom().getSuit().getColorName().equalsIgnoreCase(color.toUpperCase()));
+                    System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                    System.out.println("\tcurr: " + currCell.apply(move).getName());
+                    System.out.println("\t\tcolor: " +  (currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(color.toUpperCase())));
+                    return (currCell.apply(move).getDeck().peek().getSuit().getColorName().equalsIgnoreCase(color.toUpperCase()));
                 };
             }
             conditions.add(valueChecker);
@@ -215,13 +240,17 @@ public class RuleFactory implements Factory {
             }
 
             valueChecker = (IMove move) -> {
-                System.out.println("checking the value of mover:" + currCell.apply(move).getDeck());
-                System.out.println("checking the value of mover:" + currCell.apply(move).getDeck().peekBottom().getValue().getNumber());
-                System.out.println("checking the value of rec:" + recipientCell.apply(move).getDeck());
-                System.out.println("checking the value of rec:" + recipientCell.apply(move).getDeck().peekBottom().getValue().getNumber());
+                //System.out.println("checking the value of mover:" + currCell.apply(move).getDeck());
+                //System.out.println("checking the value of mover:" + currCell.apply(move).getDeck().peek().getValue().getNumber());
+                //System.out.println("checking the value of rec:" + recipientCell.apply(move).getDeck().peek().getValue());
+                //System.out.println("checking the value of rec:" + recipientCell.apply(move).getDeck().peek().getValue().getNumber());
+                System.out.println("d: " + move.getDonor().getName() + "|m: " + move.getMover().getName() + "|r: " + move.getRecipient().getName());
+                System.out.println("\tcurr: " + currCell.apply(move).getName());
+                System.out.println("\t\tvalue: " + (currCell.apply(move).getDeck().peek().getValue().getNumber() - value ==
+                        recipientCell.apply(move).getDeck().peek().getValue().getNumber()));
 
-                return (currCell.apply(move).getDeck().peekBottom().getValue().getNumber() - value ==
-                        recipientCell.apply(move).getDeck().peekBottom().getValue().getNumber());
+                return (currCell.apply(move).getDeck().peek().getValue().getNumber() - value ==
+                        recipientCell.apply(move).getDeck().peek().getValue().getNumber());
                 };
             conditions.add(valueChecker);
         }
